Refactor Decomposeur class for preprocessing