@@ -1,33 +1,25 @@
-package Pretraiteur;
- 
-import model.Nom;
-import java.util.Arrays;
-import java.util.List;
+package pretraitement;
 
-public class Decomposeur implements Pretraiteur{
- 
+import java.util.List;
+import java.util.stream.Collectors;
+import model.Nom;
+
+public class Decomposeur implements Pretraitement {
     private static final List<String> PARTICULES = List.of(
-            // French
-            "de", "du", "des", "le", "la", "les", "dit",
-            // Dutch/German
-            "van", "von", "der",
-            // Arabic
-            "al", "el", "ben", "bin", "binte", "abu", "um", "bou",
-            // Spanish
-            "del", "las", "los",
-            // Italian
-            "di", "da", "dello", "della"
+            "DE", "DU", "DES", "LE", "LA", "LES", "DIT",
+            "VAN", "VON", "DER", "AL", "EL", "BEN", "BIN", "BINTE", "ABU", "UM", "BOU",
+            "DEL", "LAS", "LOS", "DI", "DA", "DELLO", "DELLA"
     );
- 
+
     @Override
     public List<String> traiter(Nom nom) {
-        List<String> tokens = nom.getNomPretraite().isEmpty()
-                ? Arrays.asList(nom.getNomBrut().toLowerCase().trim().split("\\s+"))
-                : nom.getNomPretraite();
- 
-        return tokens.stream()
-                .filter(t -> t != null && !t.isBlank())
-                .filter(t -> !PARTICULES.contains(t.toLowerCase()))
-                .toList();
+        List<String> source = nom.getNomPretraite();
+        if (source.isEmpty()) {
+            return List.of();
+        }
+        return source.stream()
+                .filter(token -> token != null && !token.isBlank())
+                .filter(token -> !PARTICULES.contains(token.toUpperCase()))
+                .collect(Collectors.toList());
     }
 }
